[gd_scene load_steps=7 format=3 uid="uid://vp1w0o1iq5iq"]

[ext_resource type="Script" path="res://scenes/UI/PauseMenu.gd" id="1_5sjxs"]
[ext_resource type="Texture2D" uid="uid://cyb1dh87k82vw" path="res://Assets/Sprites/GUI/1 Frames/Frame_01.png" id="2_x05pu"]
[ext_resource type="Texture2D" uid="uid://b6ky1xjx1y1lo" path="res://Assets/Sprites/GUI/6 Buttons/1/1.png" id="3_bwj7p"]
[ext_resource type="Texture2D" uid="uid://bwu5pga7q3gow" path="res://Assets/Sprites/GUI/6 Buttons/1/2.png" id="4_wxhv7"]
[ext_resource type="Texture2D" uid="uid://3t2m2c2gu3yp" path="res://Assets/Sprites/GUI/6 Buttons/1/3.png" id="5_sj23j"]
[ext_resource type="Texture2D" uid="uid://dpgbnrvfgsfak" path="res://Assets/Sprites/GUI/5 Logo/Logo.png" id="6_a43f8"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_5sjxs")

[node name="BackgroundDim" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("2_x05pu")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GameLogo" type="TextureRect" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
texture = ExtResource("6_a43f8")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0.886275, 0.627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 24
text = "PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_bwj7p")
texture_pressed = ExtResource("4_wxhv7")
texture_hover = ExtResource("5_sj23j")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.92549, 0.886275, 0.627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_bwj7p")
texture_pressed = ExtResource("4_wxhv7")
texture_hover = ExtResource("5_sj23j")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.92549, 0.886275, 0.627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_bwj7p")
texture_pressed = ExtResource("4_wxhv7")
texture_hover = ExtResource("5_sj23j")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.92549, 0.886275, 0.627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_bwj7p")
texture_pressed = ExtResource("4_wxhv7")
texture_hover = ExtResource("5_sj23j")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.92549, 0.886275, 0.627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Exit Game"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"] 